...
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:padding="8dp"
                app:layout_constrainedHeight="true"
                app:layout_constraintBottom_toTopOf="@+id/button_next"
                app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/box_margin"
...

                <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <org.osmdroid.views.MapView
                            android:id="@+id/map"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            tools:background="@drawable/map_placeholder" />

                    <LinearLayout
...
                                android:importantForAutofill="no"
                                android:inputType="text|textPersonName"
                                android:padding="0dp"
                                android:visibility="invisible" />

                        <androidx.appcompat.widget.AppCompatImageButton
                                android:id="@+id/my_location_button"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_margin="2dp"
                                android:layout_weight="9"
                                android:background="@drawable/round_border"
                                android:contentDescription="@string/go_to_my_location"
...
                            android:text="Radius (100m)"
                            android:textAlignment="center"
                            tools:ignore="HardcodedText"
                            android:maxLines="1"/>

                    <SeekBar
                            android:id="@+id/trigger_radius"
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            tools:progress="20" />

                </LinearLayout>

...
                        android:hint="@string/hint_contact_phone"
                        android:importantForAutofill="no"
                        android:inputType="phone|text|textPersonName"
                        android:maxHeight="38dp"
                        android:minHeight="0dp"
                        android:padding="0dp"
                        app:layout_constraintBottom_toTopOf="@+id/contacts_list"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/contacts_list"
...


            </androidx.constraintlayout.widget.ConstraintLayout>


            <EditText
                    android:id="@+id/trigger_message"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_margin="@dimen/box_margin"
                    android:layout_weight="0"
                    android:background="@drawable/round_border"
                    android:gravity="start|top"
...
