...

                <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                <pl.zyper.autosms.DateDialogSpinner
                        android:id="@+id/date_spinner"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:dropDownWidth="wrap_content"
                        android:minHeight="48dp"
                        android:popupBackground="#00000000"
                        android:spinnerMode="dialog"
...

            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <pl.zyper.autosms.TimeDialogSpinner
                        android:id="@+id/time_spinner"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:dropDownWidth="wrap_content"
                        android:minHeight="48dp"
                        android:popupBackground="#00000000"
                        android:spinnerMode="dialog"
...
