...
        tools:context=".MainActivity"
        android:background="#ffffff">

    <include layout="@layout/content_main"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/gps_fab"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="240dp"
            android:layout_marginEnd="@dimen/fab_margin"
            app:fabSize="normal"
...
            android:visibility="invisible"
            app:srcCompat="@drawable/ic_reply"
            android:background="@color/colorAccent"
            tools:visibility="visible"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_fab"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:fabSize="normal"
            app:srcCompat="@drawable/ic_add"
...
